# KPCT_perfviz

./: .gitignore  .gitmodules  CMakeLists.txt  DEBUG  README.md
doc/: doxygen.conf.in
include/: PerfusionVizualizationArguments.hpp
include/utils/: Attenuation4DEvaluatorI.hpp  CTEvaluator.hpp  EngineerSeriesEvaluator.hpp  FourierSeriesEvaluator.hpp  LegendreSeriesEvaluator.hpp  PolynomialSeriesEvaluator.hpp  ReconstructedSeriesEvaluator.hpp  TimeSeriesDiscretizer.hpp
src/: PerfusionVizualizationArguments.cpp  contviz.cpp  perfviz-ctkva.cpp  perfviz-ctrec.cpp  perfviz-ctvol.cpp  perfviz-engineer.cpp  perfviz-fourier-kva.cpp  perfviz-fourier.cpp  perfviz-legendre.cpp  perfviz-polynomial.cpp  perfviz-staticrec.cpp  perfviz-timeseries.cpp  perfviz.cpp  perfvizxxx.cpp
